objects/com_smartsheet__DL_Logger__c.object
<CustomObject>
    <fields>
        <fullName>com_smartsheet__doNotSend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>doNotSend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__message__c</fullName>
        <label>message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The time when the message occured</description>
        <label>time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>DL_Logger</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>DL_Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DL_Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>